unpackaged/main/default/objects/Application_Line_Item__c/Application_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Application Line Item</label>
    <nameField>
        <displayFormat>APL-{0000}</displayFormat>
        <label>Application Line Item Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>