unpackaged/main/default/objects/Application_Line_Item__c/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional</label>
    <type>Checkbox</type>
</CustomField>