unpackaged/main/default/objects/Application_Line_Item__c/fields/Application_Unit__c.field-meta.xml
<CustomField>
    <fullName>Application_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Unit</label>
    <referenceTo>Application_Unit__c</referenceTo>
    <relationshipLabel>Application Line Items</relationshipLabel>
    <relationshipName>Application_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>