unpackaged/main/default/objects/Application_Line_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Id,   Product__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item</label>
    <type>Text</type>
</CustomField>